--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,14 @@
 <resources>
     <string name="app_name">BMI</string>
-    <string name="bmi">BMI</string>
-    <string name="status"></string>
+    <string name="bmi">Body Mass Index</string>
+    <string name="status">Status</string>
     <string name="hint_weight">Enter weight (kg)</string>
     <string name="hint_height">Enter height (cm)</string>
     <string name="calculate">CALCULATE</string>
     <string name="reset">RESET</string>
+    <string name="under">Underweight</string>
+    <string name="normal">Normal</string>
+    <string name="over">Overweight</string>
+    <string name="errWeight">Weight is required</string>
+    <string name="errHeight">Height is required</string>
 </resources>
